--- a/app/index.html
+++ b/app/index.html
@@ -194,7 +194,7 @@
     ga('create', 'UA-69832814-1');
     ga('send', 'pageview');
     </script>
-    <!--[if lt IE 9]>
+    <!--[if lt IE 9]> lol fuck IE
         <script src="bower_components/es5-shim/es5-shim.js"></script>
         <script src="bower_components/json3/lib/json3.min.js"></script>
         <![endif]-->
