--- a/app/index.html
+++ b/app/index.html
@@ -8,7 +8,7 @@
     <meta name="viewport" content="width=device-width">
     <!-- Place favicon.ico and apple-touch-icon.png in the root directory -->
     <script src="https://code.jquery.com/jquery-2.1.4.min.js"></script>
-    <script src="http://fenixrepo.fao.org/cdn/js/jquery.bridget/1.1.0/jquery.bridget.js"></script>
+    <script src="https://bowercdn.net/c/jquery-bridget-1.1.0/jquery.bridget.js"></script>
     <link rel="stylesheet" href="https://maxcdn.bootstrapcdn.com/font-awesome/4.4.0/css/font-awesome.min.css">
 
     <!-- build:css(.) styles/vendor.css -->
@@ -245,6 +245,7 @@
     <script src="scripts/controllers/home.js"></script>
     <script src="scripts/controllers/filters.js"></script>
     <script src="scripts/controllers/irc.js"></script>
+    <script src="scripts/controllers/blogs.js"></script>
     <!-- endbuild -->
 </body>
 
