--- a/app/index.html
+++ b/app/index.html
@@ -87,22 +87,30 @@
                     </li>
                     <li id="filters" class="sub-menu collapse" role="menu" >
                         <ul class="filter-block">
-                            <li class="dropdown filter"style="width:60%">
+                            <li class="dropdown filter"style="width:60%" ng-class="{hidden:show}">
                                 <a>
                                     <i class="fa fa-flag fa fa-fw"></i>
                                     <select id="lang" ng-model="lang" ng-change="changeLang()" data-toggle="select" class="form-control select select-default filter-select">
                                         <option value="">
                                             All languages
                                         </option>
+                                        <option ng-if="type == 'Board'" ng-repeat="l in languages" value="{{l.key}}">
+                                            {{l.value}}
+                                        </option>
+                                        <option ng-if="type == 'Blog'" ng-repeat="l in languagesBlogs" value="{{l.key}}">
+                                            {{l.value}}
+                                        </option>
+                                        <!--
                                         <option value="us">
                                             English
                                         </option>
-                                        <option value="fr">Filter
+                                        <option value="fr">
                                             French
                                         </option>
                                         <option value="es">
                                             Spanish
                                         </option>
+                                        -->
                                     </select>
                                 </a>
                             </li>
@@ -110,18 +118,27 @@
                                 <a>
                                     <i class="fa fa-sort fa fa-fw"></i>
                                     <select id="sortBy" data-toggle="select" ng-model="sortBy" ng-change="changeSortBy()" class="form-control select select-default filter-select">
-                                        <option value="title">
-                                            By title
+                                        <option value="title%20ASC">
+                                            By title Asc
                                         </option>
-                                        <option value="lang">
-                                            By language
+                                        <option value="title%20DESC">
+                                            By title Desc
                                         </option>
-                                        <option value="rank">
-                                            By Alexa rank
+                                        <option value="lang%20ASC">
+                                            By language Asc
                                         </option>
-                                        <option>
+                                        <option value="lang%20DESC">
+                                            By language Desc
+                                        </option>
+                                        <option value="rank%20ASC" ng-class="{hidden:show}">
+                                            By Alexa rank Asc
+                                        </option>
+                                        <option value="rank%20DESC" ng-class="{hidden:show}">
+                                            By Alexa rank Desc
+                                        </option>
+                                        <!--option value=>
                                             By popularity
-                                        </option>
+                                        </option-->
                                     </select>
                                 </a>
                             </li>
@@ -131,9 +148,15 @@
                                     <span class="checkbox-hide-link">Hide inactive links</span>
                                 </a>
                             </li>
-                            <li class="dropdown filter" style="width:60%">
-                                <input type="text" value="" data-role="tagsinput" placeholder="Search by tag" class="filter-tags tag-search-input" >
+                            <li class="dropdown filter" ng-class="{hidden:show}">
+                                <a href="" ng-click="toggleShowPrivate()">
+                                    <i class="fa {{ showPrivate ? 'fa-check-square-o' : 'fa-square-o'}}  fa-fw "></i>
+                                    <span class="checkbox-hide-link">Private</span>
+                                </a>
                             </li>
+                            <!--li class="dropdown filter" style="width:60%">
+                                <input type="text" value="" data-role="tagsinput" placeholder="Search by tag" class="filter-tags tag-search-input" >
+                            </li-->
                         </ul>
                     </li>
                     <!-- End filters menu-->
@@ -145,7 +168,7 @@
         </div>
         <!-- /#sidebar-wrapper -->
         <!-- Page Content -->
-        <div class="ui-view" id="page-content-wrapper">
+        <div ng-controller="MainCtrl" class="ui-view" id="page-content-wrapper">
         </div>
         <!-- /#page-content-wrapper -->
     </div>
